--- a/cobrinha.yml
+++ b/cobrinha.yml
@@ -1,31 +1,25 @@
-nome: Gerar dados
-em:
-  agendamento: # executar a cada 12 horas
+name: Generate Datas
+
+on:
+  schedule: # execute every 12 hours
     - cron: "* */12 * * *"
   workflow_dispatch:
-empregos:
-  construir:
-    nome: Trabalhos para atualizar dados
-    runs-on: ubuntu-mais recente
-    passos:
-      # Cartões de Resumo
-      - usos: ações/checkout@v2
-      - usa: vn7n24fzkq/github-profile-summary-cards@release
-        env:
-          GITHUB_TOKEN: ${{ segredos. GITHUB_TOKEN }}
-        com:
-          NOME DE USUÁRIO: ${{ github.repository_owner }}
 
-      # Animação de cobras
-      - usos: Platane/snk@master
-        id: cobra-gif
-        com:
+jobs:
+  build:
+    name: Jobs to update datas
+    runs-on: ubuntu-latest
+    steps:
+      # Snake Animation
+      - uses: Platane/snk@master
+        id: snake-gif
+        with:
           github_user_name: Ally-Developer
           svg_out_path: dist/github-contribution-grid-snake.svg
-      - usa: crazy-max/ghaction-github-pages@v2.1.3
-        com:
-          target_branch: saída
+
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ segredos. GITHUB_TOKEN }}
-  
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
